[package]
name = "esplora-cli"
version = "0.1.1"
edition = "2021"
authors = ["Yancy <rust@yancy.lol>"]
license = "MIT"
homepage = "https://github.com/yancyribbens/esplora-cli"
repository = "https://github.com/yancyribbens/esplora-cli"
documentation = "https://docs.rs/esplora-client/"
description = "Bitcoin Esplora CLI API"
keywords = ["bitcoin", "esplora"]
readme = "README.md"


[dependencies]
anyhow = "1"
bitcoin = { version = "0.32.6", features = ["serde", "std"], default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4.28"
pretty_env_logger = "0.5.0"
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }

[dependencies.esplora-client]
# esplora-client = { version = "0.12.0", features = ["blocking-https"] }
path = "../rust-esplora-client"
features = ["async-https", "tokio"]
