[package]
name = "esplora-cli"
version = "0.1.1"
edition = "2021"
authors = ["Yancy <rust@yancy.lol>"]
license = "MIT"
homepage = "https://github.com/yancyribbens/esplora-cli"
repository = "https://github.com/yancyribbens/esplora-cli"
documentation = "https://docs.rs/esplora-client/"
description = "Bitcoin Esplora CLI API"
keywords = ["bitcoin", "esplora"]
readme = "README.md"


[dependencies]
anyhow = "1"
bitcoin = { version = "0.32.7", features = ["serde", "std"], default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
mempool_space_api = { version = "0.0.5", features = ["reqwest"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
